--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -76,7 +76,7 @@ body {
   width: 311px;
   height: 100%;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  border-radius: 5px;
   color: #4d4f62;
   padding: 25px;
   background-position: right 10% bottom 15%;
@@ -114,4 +114,49 @@ body {
   background-image: url(/images/icon-calculator.svg);
   grid-column: 1 / 2;
   grid-row: 4 / 5;
+}
+
+@media screen and (min-width: 1200px) {
+  .header h1 {
+    font-size: 4rem;
+  }
+
+  .header h2 {
+    font-size: 4rem;
+  }
+
+  .header p {
+    width: 540px;
+    font-size: 1.8rem;
+  }
+
+  .container {
+    margin-top: 50px;
+    grid-template-columns: repeat(3, 350px);
+    grid-template-rows: repeat(4, 125px);
+  }
+
+  .panel-1 {
+    width: 100%;
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+
+  .panel-2 {
+    width: 100%;
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+  }
+
+  .panel-3 {
+    width: 100%;
+    grid-column: 2 / 3;
+    grid-row: 3 / 5;
+  }
+
+  .panel-4 {
+    width: 100%;
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+  }
 }
