--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -73,6 +73,7 @@ body {
 .panel-2,
 .panel-3,
 .panel-4 {
+  background-color: #fff;
   width: 311px;
   height: 100%;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
