--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -76,7 +76,7 @@ body {
   background-color: #fff;
   width: 311px;
   height: 100%;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   color: #4d4f62;
   padding: 25px;
@@ -118,6 +118,10 @@ body {
 }
 
 @media screen and (min-width: 1200px) {
+  .header {
+    margin-top: 50px;
+  }
+
   .header h1 {
     font-size: 4rem;
   }
