--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -26,20 +26,20 @@ body {
   padding: 0 30px;
 }
 
-.header h1 {
+.header__top {
   font-weight: 200;
   font-size: 2.5rem;
   margin: 0;
   opacity: 70%;
 }
 
-.header h2 {
-  font-weight: 600;
+.header__byline {
+  font-weight: 400;
   font-size: 2.5rem;
   margin: 0;
 }
 
-.header p {
+.header__body {
   width: 311px;
   font-weight: 200;
   font-size: 1.5rem;
@@ -122,15 +122,15 @@ body {
     margin-top: 50px;
   }
 
-  .header h1 {
+  .header__top {
     font-size: 4rem;
   }
 
-  .header h2 {
+  .header__byline {
     font-size: 4rem;
   }
 
-  .header p {
+  .header__body {
     width: 540px;
     font-size: 1.8rem;
   }
@@ -139,29 +139,37 @@ body {
     margin-top: 50px;
     grid-template-columns: repeat(3, 350px);
     grid-template-rows: repeat(4, 125px);
+    grid-gap: 0;
   }
 
   .panel-1 {
-    width: 100%;
+    width: 350px;
+    height: 250px;
     grid-column: 1 / 2;
     grid-row: 2 / 4;
+    margin-right: 50px;
   }
 
   .panel-2 {
-    width: 100%;
+    width: 350px;
+    height: 250px;
     grid-column: 2 / 3;
     grid-row: 1 / 3;
   }
 
   .panel-3 {
-    width: 100%;
+    width: 350px;
+    height: 250px;
     grid-column: 2 / 3;
     grid-row: 3 / 5;
+    margin-top: 25px;
   }
 
   .panel-4 {
-    width: 100%;
+    width: 350px;
+    height: 250px;
     grid-column: 3 / 4;
     grid-row: 2 / 4;
+    margin-left: 50px;
   }
 }
